# maintainer-tools

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  Dockerfile-tx-bot  README.md  copier-update-all.sh  mise.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tools.md  tox.ini
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
conventions/: README.rst
oca/: __init__.py
oca/tools/: __init__.py  check_contrib.py  clone_everything.py  colors.py  copy_maintainers.py  github_login.py  oca_projects.py  oca_sync_users.py  set_repo_labels.py
template/module/: CONFIGURE.rst  HISTORY.rst  README.rst  README.rst.mustache  __init__.py  __manifest__.py  __openerp__.py  exceptions.py  hooks.py
template/module/controllers/: __init__.py  main.py
template/module/data/: model_name_data.xml
template/module/demo/: assets.xml  model_name_demo.xml  res_partner_demo.xml
template/module/examples/: README.rst
template/module/migrations/8.0.1.0.0/: post-migrate.py  pre-migrate.py
template/module/models/: __init__.py  abstract_something.py  model_name.py
template/module/readme/: CONFIGURE.md  CONTEXT.md  CREDITS.md  DESCRIPTION.md  DESCRIPTION.rst  HISTORY.md  INSTALL.md  ROADMAP.md  USAGE.md
template/module/report/: __init__.py  report_name.py
template/module/security/: ir.model.access.csv  some_model_security.xml
template/module/static/description/: index.html
template/module/static/src/css/: module_name.css
template/module/static/src/js/: module_name.js  module_name.tour.js  web_module_name.js  web_module_name.tour.js  website_module_name.js
template/module/static/src/xml/: module_name.xml
template/module/static/tests/js/: module_name.js
template/module/templates/: assets.xml
template/module/tests/: __init__.py  test_abstract_something.py  test_something.py
template/module/views/: assets.xml  model_name.xml  model_name_view.xml  report_name.xml  res_partner_view.xml
template/module/wizards/: __init__.py  wizard_model.py  wizard_model.xml  wizard_model_view.xml
tests/: __init__.py  test_autopep8_extended.py  test_config.py  test_fix_manifest_website.py  test_gen_addon_icon.py  test_gen_addon_readme.py  test_gen_addons_table.py  test_gen_external_dependencies.py  test_gen_metapackage.py  test_hash.py  test_manifest.py  test_mark_modules_uninstallable.py  test_towncrier.py  test_update_pre_commit_excluded_addons.py  utils.py
tests/data/readme_tests/addon1/: README.expected-acme  README.expected-acme.rst  README.expected-oca  README.expected-oca.rst  __manifest__.py
tests/data/readme_tests/addon1/readme/: CONFIGURE.rst  CONTRIBUTORS.rst  CREDITS.rst  DEVELOP.rst  HISTORY.rst  INSTALL.rst  ROADMAP.rst  USAGE.rst
tests/data/readme_tests/addon_one_maintainer/: README.expected-acme  README.expected-acme.rst  README.expected-oca  README.expected-oca.rst  __manifest__.py
tests/data/readme_tests/addon_one_maintainer/readme/: DESCRIPTION.rst
tests/data/readme_tests/addon_two_maintainers/: README.expected-acme  README.expected-acme.rst  README.expected-oca  README.expected-oca.rst  __manifest__.py
tests/test_repo/: README.md  README.md.expected
tests/test_repo/__unported__/module3/: __init__.py  __openerp__.py
tests/test_repo/module1/: README.rst  __init__.py  __openerp__.py
tests/test_repo/module2/: README.rst  __openerp__.py
tools/: __init__.py  _hash.py  add-badges.py  add_team_repo.py  autopep8_extended.py  bdist_all_wheels.py  branches.yaml  check_contrib  clone_everything  clone_everything.py  compat.py  config.py  configure_travis.py  copier_update.py  copy_branches.py  copy_maintainers.py  create_branch.py  create_branch_from_previous.py  create_migration_issue.py  create_pull_request.py  dist_to_simple_index.py  fix-people-name-account-analytic.sh  fix-people-name-account-budgeting.sh  fix-people-name.sh  fix_manifest_website.py  fork-projects.py  fork_projects.py  gen_addon_banner.py  gen_addon_icon.css  gen_addon_icon.py  gen_addon_icon_template.html  gen_addon_readme.py  gen_addon_readme.rst.jinja  gen_addon_readme.template  gen_addon_readme.template.es_ES  gen_addons_table  gen_addons_table.py  gen_all_addons_tables.py  gen_external_dependencies.py  gen_metapackage.py  (+32 more)
tools/control_board/: generate_control_board.py  requirements.txt
tools/oca_port/: __init__.py  migrate_addon.py  misc.py  port_addon_pr.py
