[metadata]
name = oca-maintainers-tools
author = OCA - Odoo Community Associatin
summary = Set of tools for the management of the Odoo Community projects
license = APGL3
description-file = README.md
requires-python = >=2.7
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
[files]
packages =
    oca
    oca.tools

[entry_points]
console_scripts =
    oca-github-login = oca.tools.github_login:main
    oca-copy-maintainers = oca.tools.copy_maintainers:main
    oca-copy-branches = oca.tools.copy_branches:main
    oca-clone-everything = oca.tools.clone_everything:main
    oca-set-repo-labels = oca.tools.set_repo_labels:main
    oca-odoo-login = oca.tools.odoo_login:main
    oca-sync-users = oca.tools.oca_sync_users:main
    oca-autopep8 = oca.tools.autopep8_extended:main
    oca-tx-pull = oca.tools.tx_pull:main
    oca-gen-addons-table = oca.tools.gen_addons_table:main
