[metadata]
name = oca-maintainers-tools
author = Odoo Community Association (OCA)
summary = Set of tools for the management of the Odoo Community projects
license = APGL3
description-file = README.md
requires-python = >=2.7
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
[files]
packages =
    tools
[entry_points]
console_scripts =
    oca-github-login = tools.github_login:main
    oca-copy-maintainers = tools.copy_maintainers:main
    oca-copy-branches = tools.copy_branches:main
    oca-clone-everything = tools.clone_everything:main
    oca-set-repo-labels = tools.set_repo_labels:main
    oca-odoo-login = tools.odoo_login:main
    oca-sync-users = tools.oca_sync_users:main
    oca-autopep8 = tools.autopep8_extended:main
    oca-tx-pull = tools.tx_pull:main
    oca-gen-addons-table = tools.gen_addons_table:main
    oca-gen-all-addons-tables = tools.gen_all_addons_tables:main
    oca-migrate-branch = tools.migrate_branch:main
    oca-bdist-all-wheels = tools.bdist_all_wheels:main
    oca-pypi-upload-wheels = tools.pypi_upload_wheels:cli
    oca-wh2simple = tools.wh2simple:main
